--- a/final_report/FinalReport.tex
+++ b/final_report/FinalReport.tex
@@ -153,23 +153,16 @@ From $\Var{E}$ and $\Var{|M|}$ we calculate specific heat $c_V$ and magnetic sus
 \end{align}
 
 
-By plotting $c_V$ and $\chi$ against temperature, we can observe the expected divergence of these quantities near $T_c$ (\autoref{fig:fig3a}, \autoref{fig:fig3b})[[fix me!]].
+By plotting $c_V$ and $\chi$ against temperature, we can observe the expected divergence of these quantities near $T_c$ (\autoref{fig:fig3}).
 
-The analytical solution gives that $\chi$ and $c_V$ vary according to power laws near $T_c$. We use these relations to find $T_c$ and the critical exponents simultaneously, as multiple parameters in a single power law regression. We depict the resulting power law functions in [[fix me!]] %\autoref{fig:fig3}.
+The analytical solution gives that $\chi$ and $c_V$ vary according to power laws near $T_c$. We use these relations to find $T_c$ and the critical exponents simultaneously, as multiple parameters in a single power law regression. We depict the resulting power law functions in \autoref{fig:fig3}.
 We use only data from the shaded regions for the fits, where the inner radius is chosen based on convergence concerns near critical temperature\footnote{See Appendix A.} as well as finite size effects close to critical temperature, and the outer radius is chosen to include only data near $T_c$, where the power laws apply (i.e. the linear regime in \autoref{fig:fig5})[[fix me!]]. For the critical exponents defined both above and below $T_c$, we generate separate fits on each side [[fix me!]].
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=.4\textwidth]{figs/fig3_chi.png}
-		\caption{Magnetic susceptibility at a range of temperatures. Susceptibility is calculated from variance in M over each simulation, which is taken as a single measurement. Data points on this graph are the mean of variance(M) over all 20 simulations at a given temperature, and error bars on this graph are the standard error of this mean. Shown in orange is a power law fit with $T_c$ and $\gamma$ considered as free variables, using only the data in the shaded column. NOTE: we intend to merge figures 3 and 4 into a single figure with 2 graphs.}
-		\label{fig:fig3a}
-	\end{center}
-\end{figure}
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=.4\textwidth]{figs/fig3_cv.png}
-		\caption{Specific heat at a range of temperatures. Like susceptibility, specific heat is calculated from variance in E across MCMC steps. Data points on this graph are the mean of variance(E) over all 97 independent simulations at a given temperature, and error bars on this graph are the standard error of this mean. Shown in orange and green are logarithmic fits in which $T_c$ was considered a free variable, using only the data in the shaded columns. We generated separate fits on the left and right of Tc. Although the power law should be symmetric, we find significantly different results for Tc. NOTE: we intend to merge figures 3 and 4 into a single figure with 2 graphs.}
-		\label{fig:fig3b}
+		\includegraphics[width=.4\textwidth]{figs/fig3.png}
+		\caption{Magnetic susceptibility at a range of temperatures. Susceptibility is calculated from variance in M over each simulation, which is taken as a single measurement. Data points on this graph are the mean of variance(M) over all 20 simulations at a given temperature, and error bars on this graph are the standard error of this mean. Shown in orange is a power law fit with $T_c$ and $\gamma$ considered as free variables, using only the data in the shaded column. NOTE: we intend to merge figures 3 and 4 into a single figure with 2 graphs. BREAK. Specific heat at a range of temperatures. Like susceptibility, specific heat is calculated from variance in E across MCMC steps. Data points on this graph are the mean of variance(E) over all 97 independent simulations at a given temperature, and error bars on this graph are the standard error of this mean. Shown in orange and green are logarithmic fits in which $T_c$ was considered a free variable, using only the data in the shaded columns. We generated separate fits on the left and right of Tc. Although the power law should be symmetric, we find significantly different results for Tc. NOTE: we intend to merge figures 3 and 4 into a single figure with 2 graphs.}
+		\label{fig:fig3}
 	\end{center}
 \end{figure}
 
@@ -210,7 +203,7 @@ where $\xi$ depends on temperature. \autoref{fig:fig4a} depicts some of these ca
 
 \begin{figure*}[h]
 	\begin{center}
-		\includegraphics[width=1\textwidth]{figs/fig5_crit_exponents.png}
+		\includegraphics[width=1\textwidth]{figs/lastfig.png}
 		\caption{Power law fits for the critical exponents for $c_V$ ($\alpha$) (upper left), $\chi$ ($\gamma$) (upper right), $|M|$ ($\beta$) (lower left), and $\xi$ ($\nu$) (lower right). We attempt to show $\alpha = 0$ by successfully fitting a logarithmic function to $c_V$. In each graph, the x-axis is the normalized temperature $t = \frac{T - T_c}{T_c}$, where $T_c$ is the analytic value of $T_c$. As before, only data from the shaded regions was used for fits. We find the following values: $\gamma = 1.40 \pm .01$, $\beta = 0.103 \pm .002$, $\nu = 0.49 \pm .01$. All critical exponents are, of course, unitless. We have not checked identities because these values are clearly broken, $\nu$ especially (see abstract for details).}
 		\label{fig:fig5}
 	\end{center}
