--- a/final_report/FinalReport.tex
+++ b/final_report/FinalReport.tex
@@ -161,7 +161,7 @@ We use only data from the shaded regions for the fits, where the inner radius is
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=.4\textwidth]{figs/fig3.png}
-		\caption{Magnetic susceptibility at a range of temperatures. Susceptibility is calculated from variance in M over each simulation, which is taken as a single measurement. Data points on this graph are the mean of variance(M) over all 20 simulations at a given temperature, and error bars on this graph are the standard error of this mean. Shown in orange is a power law fit with $T_c$ and $\gamma$ considered as free variables, using only the data in the shaded column. NOTE: we intend to merge figures 3 and 4 into a single figure with 2 graphs. BREAK. Specific heat at a range of temperatures. Like susceptibility, specific heat is calculated from variance in E across MCMC steps. Data points on this graph are the mean of variance(E) over all 97 independent simulations at a given temperature, and error bars on this graph are the standard error of this mean. Shown in orange and green are logarithmic fits in which $T_c$ was considered a free variable, using only the data in the shaded columns. We generated separate fits on the left and right of Tc. Although the power law should be symmetric, we find significantly different results for Tc. NOTE: we intend to merge figures 3 and 4 into a single figure with 2 graphs.}
+		\caption{Specific heat $c_V$ (top) and magnetic susceptibility $\chi$ (bottom) at a range of temperatures. $c_V$ and $\chi$ are calculated from variance in $E$ and $M$ respectively, as given in \autoref{eq:cv} and \autoref{eq:chi}. Each data point is the mean of $c_V$ or $\chi$ across 20 simulations at a given temperature, with error bars from the standard error of this mean. In the shaded regions, we use least-squares regression to fit expected functions near $T_c$ (logarithm for $c_V$, and a power law with critical exponent $\gamma$ for $\chi$), with $T_c$ as a free parameter. Although $\gamma$ is defined above and below $T_c$, finite size effects visible through high uncertainties in $\chi$ make it impractical to perform a second fit.}
 		\label{fig:fig3}
 	\end{center}
 \end{figure}
