chi squared calculation

--- a/analysis_notebooks/fit_observables.ipynb
+++ b/analysis_notebooks/fit_observables.ipynb
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 320,
    "id": "27c4b740",
    "metadata": {},
    "outputs": [
@@ -946,6 +946,7 @@
      "output_type": "stream",
      "text": [
       "cV = -0.220 + 0.492 * log(t)\n",
+      "Reduced chi-squared = 1.553 for DoF = 13\n",
       "gamma = 1.674 ± 0.024\n",
       "beta = 0.097 ± 0.001\n",
       "nu = 0.760 ± 0.041\n"
@@ -954,7 +955,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14ca2c34e32e4a07a4afeb5f5a8c94b6",
+       "model_id": "e99ab87464bd4e9ab1664cb8204937fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -987,6 +988,9 @@
     "ax[0, 0].fill_betweenx([0, cv.max() * 1.1], -np.log(t_red[partition_r]), -np.log(t_red[outer_r]), color=\"black\", alpha=0.1)\n",
     "popt, pcov = curve_fit(lambda x, a, b : a * x + b, -np.log(t_red[partition_r:outer_r]), cv[partition_r:outer_r], p0 = (1, 0), sigma=cv_error[partition_r:outer_r])\n",
     "print(f\"cV = {popt[1]:.3f} + {popt[0]:.3f} * log(t)\")\n",
+    "chisq = np.sum(((-np.log(t_red[partition_r:outer_r]) * popt[0] + popt[1]) - cv[partition_r:outer_r]) ** 2 / cv_error[partition_r:outer_r] ** 2) / (len(cv[partition_r:outer_r]) - 2)\n",
+    "print(f\"Reduced chi-squared = {chisq:.3f} for DoF = {len(cv[partition_r:outer_r]) - 2}\")\n",
+    "#chisq = np.sum((cv[t_red_pos] - (popt[1] + popt[0] * mlogt)) ** 2 / (cv_error[t_red_pos] ** 2)) / \n",
     "ax[0, 0].plot(mlogt, popt[1] + popt[0] * mlogt)\n",
     "ax[0, 0].set_ylim(0, cv.max() * 1.1)\n",
     "\n",
