--- a/final_report/FinalReport.tex
+++ b/final_report/FinalReport.tex
@@ -86,10 +86,10 @@ Onsager's analytical solution for infinite rectangular lattices \cite{Onsager} d
 \end{equation}
 where $k_B$ is Boltzmann's constant. At $T_c$ the equilibrium state of the model is discontinuous with respect to temperature. Qualitatively, for $T > T_c$ the lattice is highly disordered, while for $T < T_c$ the spin states correlate significantly with others nearby (\autoref{fig:fig1}).
 
-The model's behavior at temperatures near $T_c$ has been the subject of extensive study. As the temperature approaches $T_c$, several observable quantities vary according to power laws in the reduced temperature $t = \frac{T - T_c}{T_c}$. Among these are specific heat $C_v$, absolute magnetization $|M|$, magnetic susceptibility $\chi$, and correlation length $\xi$. Auto-correlation $\submin{\sigma(0)\sigma(x)}$ also varies according to a power law, although in lattice distance $x$ rather than in $t$. These power laws, and their corresponding exponents (the critical exponents) are not specific to a particular Ising lattice; rather, they are properties of a broader universality class of critical systems \cite{Stanley}. For the Ising model on a rectangular lattice we expect the behavior near $T_c$ outlined in \autoref{tab:exponents}.
+The model's behavior at temperatures near $T_c$ has been the subject of extensive study. As the temperature approaches $T_c$, several observable quantities vary according to power laws in the reduced temperature $t = \frac{T - T_c}{T_c}$. Among these are specific heat $C_v$, absolute magnetization $|M|$, magnetic susceptibility $\chi$, and correlation length $\xi$. Auto-correlation $\submin{\sigma(0)\sigma(x)}$ also varies according to a power law, although in lattice distance $x$ rather than in $t$. These power laws, and their corresponding exponents (the critical exponents) are not specific to a particular Ising lattice; rather, they are properties of a broader universality class of critical systems \cite{Stanley}. For the Ising model on a rectangular lattice we expect the following behavior near $T_c$: %\autoref{tab:exponents}.
 
 % Table of critical exponents
- \begin{table}[h]
+% \begin{table}[h]
 	\begin{center}
 		\begin{tabular}{|c|c|c|}
 			\hline
@@ -102,12 +102,12 @@ The model's behavior at temperatures near $T_c$ has been the subject of extensiv
 			$\submin{\sigma(0)\sigma(x)}$ & $|x|^{-d + 2 - \eta}$ & $ \eta \approx 1/4$ \\
 			\hline
 		\end{tabular}
-		\caption{Analytical prediction of critical exponents for the $d = 2$ Ising model. All exponents are defined above and below $T_c$ except $\beta$, which is defined only for $T < T_c$. Note that in the case of $\alpha = 0$, the specific heat is expected to diverge logarithmically as $C_v \sim \log t$.}
-		\label{tab:exponents}
+%		\caption{Analytical prediction of critical exponents for the $d = 2$ Ising model. All exponents are defined above and below $T_c$ except $\beta$, which is defined only for $T < T_c$. Note that in the case of $\alpha = 0$, the specific heat is expected to diverge logarithmically as $C_v \sim \log t$.}
+%		\label{tab:exponents}
 	\end{center}
- \end{table}
+% \end{table}
 
-These critical exponents also obey certain identities \cite{Stanley}:
+These critical exponents also obey certain identities [[source?]]:
 
 \begin{equation}
 	\text{Rushbrooke's Identity: } \alpha + 2\beta + \gamma = 2 \label{eq:rushbrooke}
@@ -146,17 +146,17 @@ Second, lattice configurations in consecutive simulation steps are highly correl
 	\end{center}
 \end{figure}
 
-From $\Var{E}$ and $\Var{|M|}$ we calculate the specific heat $c_V$ and magnetic susceptibility $\chi$ per lattice site:
-\begin{equation}
-	c_V \equiv \frac{\partial \submin{E}}{\partial T} = \frac{1}{k_BT^2}\frac{\Var{N^2 E}}{N^2} \label{eq:cv}
-\end{equation}
-\begin{equation}
-	\chi \equiv \frac{\partial \submin{M}}{\partial T} = \frac{1}{k_BT}\frac{\Var{N^2 |M|}}{N^2}	\label{eq:chi}
-\end{equation}
+From $\Var{E}$ and $\Var{|M|}$ we calculate specific heat $c_V$ and magnetic susceptibility $\chi$ per lattice site:
+\begin{align}
+	c_V \equiv \frac{\partial \submin{E}}{\partial T} = & \frac{1}{k_BT^2}\frac{\Var{N^2 E}}{N^2} \label{eq:cv} \\
+	\chi \equiv \frac{\partial \submin{M}}{\partial T} = & \frac{1}{k_BT}\frac{\Var{N^2 |M|}}{N^2}	\label{eq:chi}
+\end{align}
 
-Plotting $c_V$ and $\chi$ against temperature (\autoref{fig:fig3}) illustrates the divergence in behavior with respect to temperature when near $T_c$. By assuming Onsager's predicted power-law behavior of these quantities near $T_c$, we can compute estimates for $T_c$ and the corresponding critical exponents simultaneously by power law regression. It is important to note that while the power laws are only expected to hold near criticality ($t << 1$), the noise in $\Var{E}$, $\Var{M}$ and more generally the diversity of observed simulation states is most pronounced in that same region. Therefore, to effectively fit power laws to the data, we select an annular region of temperatures around $T_c$ and fit the power laws to the data in that region. The inner radius of the annulus is chosen based on convergence concerns\footnote{See Appendix A.} as well as finite size effects close to criticality, and the outer radius is chosen to best include the power-law regime in the data (see \autoref{fig:fig5}). In the case of $c_V$, we calculate logarithmic fits both above and below $T_c$; however, the susceptibility $\chi$ resulting from our simulations is only-well behaved when approaching $T_c$ from above.
 
-Our logarithmic fits for $c_V \propto \log |t|$ yield estimates of $T_c$ at $2.272 \pm 0.008$ from above ($t > 0$) and $2.28 \pm 0.1$ from below ($t < 0$). Our power-law fit for $\chi \propto |t|^{-\gamma}$ yields an estimate of $T_c = 2.27 \pm 0.02$ and $\gamma = 1.7 \pm 0.1$. These estimates are consistent with the analytic values in \autoref{eq:Tc} and \autoref{tab:exponents}.
+By plotting $c_V$ and $\chi$ against temperature, we can observe the expected divergence of these quantities near $T_c$ (\autoref{fig:fig3}).
+
+The analytical solution gives that $\chi$ and $c_V$ vary according to power laws near $T_c$. We use these relations to find $T_c$ and the critical exponents simultaneously, as multiple parameters in a single power law regression. We depict the resulting power law functions in \autoref{fig:fig3}.
+We use only data from the shaded regions for the fits, where the inner radius is chosen based on convergence concerns near critical temperature\footnote{See Appendix A.} as well as finite size effects close to critical temperature, and the outer radius is chosen to include only data near $T_c$, where the power laws apply (i.e. the linear regime in \autoref{fig:fig5})[[fix me!]]. For the critical exponents defined both above and below $T_c$, we generate separate fits on each side [[fix me!]].
 
 \begin{figure}[h]
 	\begin{center}
@@ -178,7 +178,7 @@ Unlike $\submin{E}$ and $\submin{M}$, we calculate the autocorrelation not as an
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=.5\textwidth]{figs/fig4_autocors.png}
-		\caption{Autocorrelation functions at representative temperatures: below, near, and above $T_c$. Shown in orange are exponential decay functions fit by least-squares regression to the positive portion of the autocorrelation data, with length scale parameter $\xi$. Autocorrelation frequently asymptotically approaches negative values (i.e. site become anticorrelated) after sufficient lattice distance, which likely plays a role in our calculation of $\nu$ far from the analytical value. As with other fits, uncertainties in the fit value reflect both uncertainty in the underlying data, as well as the effect of changing fit parameters on the $\chi^2$ value of the fit. This can be seen above, where the uncertainty for $\xi$ in the middle graph is substantially greater than above and below, indicating data which does not conform to the expected exponential decay. Systematic error introduced by negative autocorrelations is not included in these error bars, and is discussed later.}
+		\caption{Autocorrelation functions at representative temperatures: below, near, and above $T_c$. Shown in orange are exponential decay functions fit by least-squares regression to the positive portion of the autocorrelation data, with length scale parameter $\xi$. Autocorrelation frequently asymptotically approaches $\frac{-1}{N}$ (i.e. site become anticorrelated) after sufficient lattice distance, which likely plays a role in our calculation of $\nu$ far from the analytical value (see \textbf{discussion}). As with other fits, uncertainties in the fit value reflect both uncertainty in the underlying data, as well as the effect of changing fit parameters on the $\chi^2$ value of the fit. This can be seen above, where the uncertainty for $\xi$ in the middle graph is substantially greater than above and below, indicating data which does not conform to the expected exponential decay. Systematic error introduced by negative autocorrelations is not included in these error bars, and is discussed later.}
 		\label{fig:fig4a}
 	\end{center}
 \end{figure}
@@ -213,6 +213,14 @@ where $\xi$ depends on temperature. \autoref{fig:fig4a} depicts some of these ca
 \end{figure*}
 
 \textbf{Discussion:}
+
+We see qualitative and quantitative evidence for a phase transition at the critical temperature. Values calculated for $T_c$ from $c_V$ and $\chi$ agree with one another and the analytical prediction, while the value calculated from $\xi$ disagrees dramatically. Given that all quantities not dependent on autocorrelation appear to experience a phase transition near the analytic $T_c$, this is almost certainly an issue with variables that go into $\xi$ specifically. Qualitative agreement of $\submin{E}$ and $|\submin{M}|$ with analytical predictions also lends strength to this claim.
+
+What could be causing the discrepancy around $\xi$? One possibility is that the practice of using only the final lattice state in each simulation to calculate autocorrelation leads to a flawed measurement. However, this seems unlikely: if the flaw was simply too small a sample-size, we would expect to see high variance in autocorrelation over simulations, rather than the fairly tight uncertainties visible in \autoref{fig:fig4a}.
+
+We also explored the possibility of some flaw in our autocorrelation algorithm, but in the end were unable to find such an issue, reaching the same results with multiple different implementations of the algorithm. The convergence to $\frac{-1}{N}$ rather than $0$ makes sense as a finite-size effect: it clearly approaches zero as $N \rightarrow \infty$. $\frac{-1}{N}$. One possible origin for such a term is the factor of $-\sigma_{(i, j)}/N$ in $\bar{\sigma}_i$. The negative autocorrelations near $T_c$, on the other hand, reflect the formations of islands with matching spins. With a lattice composed of several such islands, each lattice site is likely to share a spin with those around it, and have spin opposite to those farther away (rather than being merely uncorrelated). This anti-correlation does, however, call into question the validity of $\xi$ values calculated near $T_c$, since strong negative correlations do not resemble the exponential decay function used to fit for $\xi$. This is the most likely explanation for why our power law fit for $\xi$ produced unreliable values for $T_c$ and $\nu$.
+
+We found the following critical exponents: $\gamma = 1.7 \pm .1$ ($T_c$ as free parameter) or $\gamma = 1.67 \pm .03$ ($T_c$ fixed to analytic value), $\beta = 0.097 \pm .001$, $\nu = 0.76 \pm .04$. We also find $\alpha = 0$ by cleanly fitting a logarithmic function to $c_V$. 
 
 \textbf{Acknowledgements:}
 	We would like to thank Professor Nir Navon, Professor Laura Newburgh, and HongJoon Kim from the Yale Department of Physics for help running simulations and interpreting results. We would also like to thank the Phys 382L course staff for developing the Ising Model simulation code used throughout this paper.
